tests/js/invalid/record/mismatched-type-1.buri
Person = {
    name: #charlie | #jane,
}

jane: Person = {
    name: "Jane",
}